--- a/Views/Tasks/Delete.cshtml
+++ b/Views/Tasks/Delete.cshtml
@@ -17,8 +17,9 @@
     <dd class="col-sm-10">@Model.DueDate?.ToString("yyyy-MM-dd")</dd>
 </dl>
 
-<form asp-action="DeleteConfirmed" method="post">
+<form asp-action="Delete" method="post">
     <input type="hidden" asp-for="Id" />
     <button type="submit" class="btn btn-danger">Delete</button>
     <a asp-action="Index" class="btn btn-secondary">Cancel</a>
 </form>
+
